# Olympus-Air-Video-Viewer

./: Cargo.toml  README.md  ffplay_log.txt  mplayer_log.txt  run.sh
src/: main.rs
src/camera/: mod.rs  olympus.rs
src/camera/client/: basic.rs  error.rs  mod.rs
src/camera/connection/: init.rs  mod.rs
src/camera/image/: delete.rs  download.rs  formats.rs  list.rs  mod.rs
src/camera/photo/: capture.rs  mod.rs
src/terminal/: app.rs  handlers.rs  mod.rs  renderer.rs  state.rs
src/terminal/image_viewer/: handlers.rs  mod.rs  renderer.rs  state.rs
src/terminal/image_viewer/display/: basic.rs  image.rs  iterm.rs  kitty.rs  mod.rs  sixel.rs  viuer.rs
src/terminal/image_viewer/renderer/: detection.rs  display.rs  mod.rs  terminal.rs  ui.rs  utils.rs
src/terminal/video_viewer/: handlers.rs  mod.rs  olympus_udp.rs  renderer.rs  state.rs
src/utils/: logging.rs  mod.rs
temp/: launch_ffplay.sh
