[package]
name = "simple_olympus_camera"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
colored = "2.0"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
crossterm = "0.26"
thiserror = "1.0"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
viuer = "0.6"  # For displaying images in the terminal
image = "0.24"  # For image processing and loading
tempfile = "3.4"  # For temporary file handling
termsize = "0.1"  # For getting terminal dimensions